--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https.//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Taskmaster Pro</title>
 </head>
@@ -15,10 +15,15 @@
 
   <div class="row min-vh-100 no-gutters">
     <header class="col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3">
-      <h1 class="text-center">Taskmaster Pro Edition</h1>
-      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add
-        Task</button>
-      <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
+     <div>
+      <h1 class="text-center"><span class="oi oi-task d-line d-lg-none"></span>
+        Taskmaster Pro Edition</h1>
+        <div class="ml-md-auto w-100 w-md-auto">
+          <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" 
+            data-target="#task-form-modal">Add Task</button>
+          <button id="remove-tasks" class="btn btn-block btn-danger mb-2 mb-md-4"></span>Delete All Tasks</button>
+        </div>
+     </div>
       <p class="mt-auto d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
         excepturi aut non
         laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
@@ -29,14 +34,10 @@
       <!-- todo start -->
       <div class="col-12 col-md-6 col-xl-3 mb-3">
         <div class="card">
-          <h4 class="card-header bg-dark text-light">
+          <h4 class="card-header bg-dark text-light d-flex align-items-center">
             To Do
             </h4>
         <ul id="list-toDo" class="list-group list-group-flush">
-          <li class="list-group-item">
-            <span class="badge badge-primary badge-pill"></span>
-            <p class="m-1"></p>
-          </li>
         </ul>
         </div>
       </div>
@@ -44,13 +45,10 @@
         <!-- in progress start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
-              In Progress</h4>
+            <h4 class="card-header bg-dark text-light d-flex align-items-center">
+              In Progress
+            </h4>
           <ul id="list-inProgress" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill"></span>
-              <p class="m-1"></p>
-            </li>
           </ul>
           </div>
         </div>
@@ -58,13 +56,10 @@
         <!-- in review start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
-            In Review</h4>
+            <h4 class="card-header bg-dark text-light d-flex align-items-center">
+            In Review
+          </h4>
           <ul id="list-inReview" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill"></span>
-              <p class="m-1"></p>
-            </li>
           </ul>
           </div>
         </div>
@@ -72,13 +67,10 @@
         <!-- done start -->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
-            Done</h4>
+          <h4 class="card-header bg-dark text-light d-flex align-items-center">
+            Done
+          </h4>
           <ul id="list-done" class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="badge badge-primary badge-pill"></span>
-              <p class="m-1"></p>
-            </li>
           </ul>
           </div>
         </div>
@@ -128,6 +120,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery-ui-touch-punch@0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
